.kubernetes/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kubernetes-workshop
  namespace: node-apps
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: kubernetes-workshop
    spec:
      containers:
      - image: $DOCKER_IMAGE
        imagePullPolicy: Always
        name: kubernetes-workshop
        ports:
        - containerPort: 8090
        livenessProbe:
          httpGet:
            path: /
            port: 8090
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 3
          failureThreshold: 3
          successThreshold: 1
          timeoutSeconds: 1
