.kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-workshop
  namespace: node-apps
spec:
  ports:
  - port: 8090
    targetPort: 8090
    protocol: TCP
  selector:
    app: kubernetes-workshop
