.kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-workshop
  namespace: node-apps
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: node.kubeint.nrk.no
    http:
      paths:
      - path: /kubernetes-workshop
        backend:
          serviceName: kubernetes-workshop
          servicePort: 8090
  tls:
  - hosts:
    - node.kubeint.nrk.no
